teach/kubernetes/yaml/network-troubleshoot-lab/selector-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: network-troubleshoot-lab
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
